--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306
     username: root
-    password: root
+    password: mysql
   rabbitmq:
     host: localhost
     port: 5672
