--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
